--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
   </head>
   <body style="width: 100%; height: 100%; background: #010101"><!-- viewBox="0 0 876 715" -->
     <section></section>
-		<div class="world_container" style="background: transparent">
+		
+			<div id="infopanel">
+				<div>&nbsp;</div>
+				<p id="name">&nbsp;</p>
+				<div>&nbsp;</div>
+				Approx. Location:
+				<p id="location" style="color: #ffffff; font-style: normal;"></p>
+				Population:
+				<p id="population" style="color: #ffffff; font-style: normal;"></p>
+				Climate:
+				<p id="climate" style="color: #ffffff; font-style: normal;"></p>
+			</div>
+		
+		<div class="world_container"><!-- style="background: transparent"-->
 			
 			<div style="width:10%; background: grey; opacity: 0.0"></div>
 				
@@ -25,7 +38,7 @@
 			<!--div style="width:80%; height:80%; position: absolute; "-->
 			<!--div class="circle" ></div-->
 			
-			<!--div style="width:40%; background: grey; opacity: 0.0"></div-->
+			
 		
 		</div>
 		
