--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <script src="./bin/d3.min.js"></script>
     <script src="./bin/topojson.min.js"></script>
     <link type="text/css" rel="stylesheet" href="./main.css">
@@ -21,6 +22,7 @@
 				<p id="population" style="color: #ffffff; font-style: normal;"></p>
 				Climate:
 				<p id="climate" style="color: #ffffff; font-style: normal;"></p>
+				<p id="touchevents"></p>
 			</div>
 		
 		<div class="world_container"><!-- style="background: transparent"-->
