--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <script src="./bin/d3.min.js"></script>
     <script src="./bin/topojson.min.js"></script>
+		<!--script src="./bin/require.js"></script-->
     <link type="text/css" rel="stylesheet" href="./main.css">
     <!--script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.0.0/d3.min.js"></script-->
     <!--script src="https://unpkg.com/topojson@3.0.2/dist/topojson.min.js"></script-->
@@ -14,7 +16,7 @@
 		
 			<div id="infopanel">
 				<div>&nbsp;</div>
-				<p id="name">&nbsp;</p>
+				<p id="name" style="font-style: normal; font-size: 20px">&nbsp;</p>
 				<div>&nbsp;</div>
 				Approx. Location:
 				<p id="location" style="color: #ffffff; font-style: normal;"></p>
@@ -25,7 +27,10 @@
 				<p id="touchevents"></p>
 			</div>
 		
+			<div id="image_container" src=""></div>
+			
 		<div class="world_container"><!-- style="background: transparent"-->
+			
 			
 			<div style="width:10%; background: grey; opacity: 0.0"></div>
 				
@@ -37,12 +42,13 @@
 				
 				<svg id="world" style="width:100%; height:100%"></svg>
 			
-			<!--div style="width:80%; height:80%; position: absolute; "-->
+			
 			<!--div class="circle" ></div-->
 			
 			
 		
 		</div>
+		
 		
     <script src="./index.js" type="module"></script>
   </body>
